--- a/catalog/view/theme/default/css/index.css
+++ b/catalog/view/theme/default/css/index.css
@@ -417,12 +417,12 @@
 	.gwc_pc .qx em.em3{width: 1.2rem;position: absolute;top: 0;right: 23%;}
 	.gwc_pc .qx em.em2{width: 1.2rem;position: absolute;top: 0;left: 50%;}
 	.gwc_pc .qx em.em1{width: 2rem;position: absolute;left: 2.5rem;}  
-	.gwc_pc .shop_ul{border-bottom: 1px solid #ddd;margin-bottom: 1.3rem;}
+	.gwc_pc .shop_ul{border-bottom: 1px solid #ddd;;}
 	.gwc_pc .shop_ul>li{position: relative;border: 1px solid #ddd;height: 2rem;padding: 0.2rem 0;border-bottom: none;}
 	.gwc_pc .shop_ul>li:first-child{border-top: none;}
 	.gwc_pc .div1{display: inline-block;float: left;}
 	.gwc_pc .div1 label{width:0.65rem;display: block;height: 1.6rem;position: relative;float: left;}
-	.gwc_pc .div1 a{display: block;float: left;width: 1.6rem;}
+	.gwc_pc .div1 a{display: block;float: left;width: 1.6rem;padding: 0;}
 	.gwc_pc .div1 img{width: 1.6rem;height: 1.6rem;}
 	.gwc_pc .div2{display: inline-block;float: left;max-width: 317px;position: absolute;left: 2.5rem;padding-left: 2.04vw;}
 	.gwc_pc .div2 a{display: inline-block;font-size: 0.18rem;line-height: 0.22rem;max-height: 0.44rem;color: #333;
@@ -455,6 +455,10 @@
 		.gwc_pc .div2 p{display: inline-block;background: #f5f5f5;font-size: 0.93vw;color: #666;border-radius: 20px;padding: 0 0.15rem;
 		height: 30px;line-height:30px; margin: 0 0.52vw 0.73vw 0;float: left;}
 	}
+	.gwc_pc .repurchase{position: fixed;bottom: 0.7rem;left: calc(50% - 580px); width: 1160px;height: 0.7rem;background: #fff6e4;
+	z-index: 100;display: block;margin: 0 auto;border: 1px solid #fff6e4;cursor: pointer;}
+	.gwc_pc .repurchase p{color: #ff8033;font-size: 20px;line-height: 0.7rem;padding: 0 20px;display: block;}
+	.gwc_pc .repurchase p span{float: right;display: inline-block;text-decoration: underline;}
 	.gwc_pc .total{position: fixed;bottom: 0;left: 0;width: 100%;height: 0.7rem;box-shadow: 0 0 10px 1px rgba(0,0,0,.2);background: #fff;z-index: 100;}
 	.gwc_pc .total .qx{max-width: 1200px;margin: auto;padding: 0 0.2rem;border: none;background: transparent;}
 	.gwc_pc .total .qx .qx_label{height: 0.7rem;line-height: 0.74rem;}
@@ -467,8 +471,92 @@
 	.gwc_pc .total .p_price span{color: #f23030;font-size: 0.3rem;float: right;margin: 0;display: inline-block;height: 0.7rem;line-height: 0.74rem;}
 	.gwc_pc .total .wishlist{height: 100%;display: inline-block;color: #333;font-size: 0.24rem;float: left;margin-left: 0.6rem;line-height: 0.74rem;cursor: pointer;}
 	.gwc_pc .total .delete{height: 100%;display: inline-block;font-size: 0.18rem;float: left;margin-left: 0.6rem;color: #f23030;line-height: 0.74rem;cursor: pointer;}
-	  
-	  
+	
+	
+	.gwc_pc .hg_div{max-width: 1160px;margin:0 auto 1.4rem auto;}
+	.gwc_pc .hg_div .top{height: 60px;background: #f5f5f5;padding: 0 40px 0 65px;border-left:1px solid #ddd ;border-right: 1px solid #ddd;}
+	.gwc_pc .hg_div .top h3{display: inline-block;float: left;font-size: 18px;color: #333;line-height: 60px;}
+	.gwc_pc .hg_div .top .hg_btn{width: 120px;height: 36px;display: block; border-radius: 50px;border: 1px solid #f23030;color: #f23030;background: #fffbfb;
+	font-size: 18px;float: right;margin: 12px 0;}
+	.gwc_pc .hg_div .bot{border: 1px solid #ddd;}
+	.gwc_pc .hg_div .bot .yxhg_ol li{width: 50%;float: left;padding: 20px 0;position: relative;}
+	.gwc_pc .hg_div .bot .yxhg_ol li hr{display: block;width: calc(100% - 65px);height: 1px;background: #eee;border: none;position: absolute;bottom: 0;right: 0;}
+	.gwc_pc .hg_div .bot .yxhg_ol li:nth-of-type(even) hr{right: 65px;}
+	.gwc_pc .hg_div .bot .yxhg_ol li:nth-child(5) hr,.gwc_pc .hg_div .bot .yxhg_ol li:nth-child(6) hr{display: none;}
+
+	.gwc_pc .hg_div .bot .yxhg_ol li .close{width: 0.22rem;height: 0.22rem;display: block;position: relative;margin: 29px 22px;float: left;
+	cursor: pointer;border-radius: 50%;border: 1px solid #707070;}
+	.gwc_pc .hg_div .bot .yxhg_ol li .close:before{content: '';width:12px;height: 1px;display: block;
+	position: absolute;left: calc(50% - 6px);top: 50%;background: #707070;transform: rotate(45deg);}
+	.gwc_pc .hg_div .bot .yxhg_ol li .close:after{content: '';width: 12px;height: 1px;display: block;
+	position: absolute;left: calc(50% - 6px);top: 50%;background: #707070;transform: rotate(-45deg);}
+	.gwc_pc .hg_div .bot .yxhg_ol li a{width: 80px;height: 80px;display: block;float: left;margin-right: 20px;}
+	.gwc_pc .hg_div .bot .yxhg_ol li img{width: 80px;height: 80px;display: block;}
+	.gwc_pc .hg_div .bot .yxhg_ol li .sp1{display: inline-block;padding: 0 20px;border-radius: 50px;font-size: 14px;color: #666;height: 30px;
+	line-height: 30px;background: #f5f5f5;margin-bottom: 23px;}
+	.gwc_pc .hg_div .bot .yxhg_ol li .sp2{font-size: 24px;line-height: 24px;height: 24px;display: inline-block;color: #FF2330;margin-right: 10px;}
+	.gwc_pc .hg_div .bot .yxhg_ol li .sp3{font-size: 18px;line-height: 24px;height: 24px;display: inline-block;color: #999;margin-right: 40px;}
+	.gwc_pc .hg_div .bot .yxhg_ol li .sp4{font-size: 14px;line-height: 24px;height: 24px;display: inline-block;color: #000;}
+	
+	.gwc_pc .hg_div .bot .yxhg_ol li .hg_tetx{display: inline-block;float: left;}
+	.gwc_pc .hg_modal {display: none;}
+	.gwc_pc .hg_modal .texts{display: block;max-width: 1200px;width: 70%;margin: 0 auto;background: #fff;transform: translateY(-50%);position: relative;top: 50%;} 
+	.gwc_pc .hg_modal .texts h2{font-size: 20px;color: #333;display: block;padding: 40px 60px 30px 60px;height: 22px;} 
+	.gwc_pc .hg_modal .texts .close{width: 0.6rem;height: 0.6rem;display: block;position: absolute;right: 7px;top:16px;cursor: pointer;}
+	.gwc_pc .hg_modal .texts .close:before{content: '';width: 22px;height: 1px;display: block;
+	position: absolute;left: calc(50% - 11px);top: 50%;background: #333;transform: rotate(45deg);}
+	.gwc_pc .hg_modal .texts .close:after{content: '';width: 22px;height: 1px;display: block;
+	position: absolute;left: calc(50% - 11px);top: 50%;background: #333;transform: rotate(-45deg);}
+	.gwc_pc .hg_modal .texts p.p1{font-size: 16px;color: #ff9c65;line-height: 20px;background: #fff6e4;padding: 15px 20px;}
+	.gwc_pc .hg_modal .hg_shop_ul{max-height: 490px;overflow-y: auto;padding: 0 60px;margin-bottom: 1.05rem;border: none;}
+	.gwc_pc .hg_modal .hg_shop_ul>li{height: 1.2rem;border-bottom: 1px solid #eee;position: relative;padding: 0.2rem 0;}
+	.gwc_pc .hg_modal .hg_shop_ul>li:last-child{border-bottom: none;}
+	.gwc_pc .hg_modal .hg_shop_ul .div1{position: absolute;left: -0.6rem;}
+	.gwc_pc .hg_modal .hg_shop_ul .big{width: 40px;height: 40px;padding: 10px 0 0 10px;position: absolute;left: 1rem;bottom: 0.03rem;cursor: pointer;}
+	.gwc_pc .hg_modal .hg_shop_ul .big span{width: 30px;height: 30px;display: block;background: rgba(0,0,0,.8) url(../img/png/fdj.png) no-repeat center;}
+	.gwc_pc .hg_modal .hg_shop_ul .div1 label{width: 0.6rem;height: 0.8rem;}
+	.gwc_pc .hg_modal .hg_shop_ul .div1 a{width: 0.8rem;padding: 0;}
+	.gwc_pc .hg_modal .hg_shop_ul .div1 img{width: 0.8rem;height: 0.8rem;}
+	.gwc_pc .hg_modal .hg_shop_ul .div_ol{width: 80%;float: left;	position: absolute;left:0.8rem;}
+	.gwc_pc .hg_modal .hg_shop_ul ol li{display: block;float: left;font-size: 14px;color: #333;padding: 0 20px;margin-left: 20px;margin-bottom: 15px;
+	border-radius: 50px;border: 1px solid #f5f5f5;background: #f5f5f5;height: 30px;line-height: 30px;cursor: pointer;}
+	.gwc_pc .hg_modal .hg_shop_ul ol li.active,.gwc_pc .hg_modal .hg_shop_ul ol li:hover{border: 1px solid #f23030;color: #f23030;background: #fffbfb;}
+	.gwc_pc .hg_modal .hg_shop_ul .price .sp1{font-size: 24px;color: #f23030;display: inline-block;margin-left: 20px;line-height: 24px;}
+	.gwc_pc .hg_modal .hg_shop_ul .price .sp2{font-size: 18px;color: #999;display: inline-block;margin-left: 20px;line-height: 24px;text-decoration: line-through;}
+	.gwc_pc .hg_modal .div4{height: 0.8rem;line-height: 0.8rem;right: 0;}
+	.gwc_pc .hg_modal .select_total{height: 1.05rem;position: absolute;bottom: 0;left: 0;width: 100%;border-top: 1px solid #eee;padding: 30px 60px;}
+	.gwc_pc .hg_modal .select_total span{height: 45px;line-height: 45px;display: inline-block;font-size: 18px;color: #333;margin-right: 80px;}
+	.gwc_pc .hg_modal .select_total span em{color: #F23030;}
+	.gwc_pc .hg_modal .select_total .con_btn{width: 160px;height: 45px;line-height: 45px;text-align: center;font-size: 16px;color: #fff;
+		border-radius: 50px;border: none;float: right;
+		background: -webkit-linear-gradient(left, #f23030 , #fb3500);
+		background: -o-linear-gradient(right, #f23030, #fb3500);
+		background: -moz-linear-gradient(right, #f23030, #fb3500);
+		background: linear-gradient(to right, #f23030 , #fb3500);
+	}
+	.gwc_pc .hg_modal .select_total .btn{width: 160px;height: 45px;line-height: 45px;text-align: center;font-size: 16px;color: #333;background: #f5f5f5;
+		border-radius: 50px;border: 1px solid #ddd;float: right;margin-left: 40px;
+	}
+	.gwc_pc .hg_modal .select_total .con_btn:hover{
+		background: -webkit-linear-gradient(left, #fa4940 , #fa4940);background: -o-linear-gradient(right, #fa4940, #fa4940);
+	  background: -moz-linear-gradient(right, #fa4940, #fa4940); background: linear-gradient(to right, #fa4940 , #fa4940); 
+
+	}
+	@media (min-width:1200px ) and (max-width:1440px) {
+		.gwc_pc .hg_modal .shop_ul {padding: 0 20px 0 60px;}
+		.gwc_pc .hg_modal .shop_ul ol li{margin-left: 10px;padding: 0 15px;font-size: 12px;}
+	}
+	.hg_img_modal {display: none;}
+	.hg_img_modal .textss{position: absolute;top: 50%;display: inline-block;left: 50%;transform: translateX(-50%) translateY(-50%);}
+	.hg_img_modal .textss img{display: block;}
+	.hg_img_modal .textss .closes{width: 0.6rem;height: 0.6rem;display: block;position: absolute;right: 0px;top:0px;cursor: pointer;background: rgba(0,0,0,.1);}
+	.hg_img_modal .textss .closes:before{content: '';width: 22px;height: 1px;display: block;
+	position: absolute;left: calc(50% - 11px);top: 50%;background: #333;transform: rotate(45deg);}
+	.hg_img_modal .textss .closes:after{content: '';width: 22px;height: 1px;display: block;
+	position: absolute;left: calc(50% - 11px);top: 50%;background: #333;transform: rotate(-45deg);}
+	
+	
+	
 	/*弹窗*/
 	.shop_modal{background: rgba(0,0,0,.5);position: fixed;top: 0;left: 0;width: 100%;height: 100%;z-index: 99;display: none;}
 	.shop_modal .text{width: 560px;background: #fff;position: absolute;top: 50%;left: 50%;margin-left: -280px;margin-top: -170px;}
@@ -2219,7 +2307,7 @@
 	.shop2_content .check_i{width: 0.5rem;height: 0.5rem;display: block; position: absolute;top: 50%;margin-top: -0.25rem; left: 0;z-index: 1;
 	background: url(../img/png/new_6.png) no-repeat left center/0.3rem;}
 	.shop2_content .check_i.active{background: url(../img/png/new_6_.png) no-repeat left center/0.3rem;}
-	.shop2_content .shop2_ul{margin-bottom: 1.2rem;}
+	.shop2_content .shop2_ul{margin:1.1rem 0 2.17rem 0;}
 	.shop2_content .shop2_ul li{position: relative;background: #fff;margin-bottom: 0.2rem;z-index: 9;padding: 0.4rem 0.4rem 0.4rem 0.8rem;overflow: hidden;}
 	.shop2_content .shop2_ul li .dx_label{width: 0.5rem;height: 0.5rem;display: block;position: absolute;top: 50%;margin-top: -0.25rem; left: 0.3rem;z-index: 9;}
 	.shop2_content .shop2_ul .pic_img{width: 1.8rem;float: left;}
@@ -2271,6 +2359,10 @@
 	.shop2_content .bot dl dd.yd_dd{display: block;}
 	.shop2_content .bot dl dd.pc_dd{display: none;}
 	
+	.shop2_content .repurchase{position: fixed;bottom: 0.98rem;left: 0; width: 100%;background: #fff6e4;
+	z-index: 100;display: block;margin: 0 auto;border: 1px solid #fff6e4;}
+	.shop2_content .repurchase a{color: #ff8033;font-size: 0.24rem;line-height: 0.3rem; padding: 0.28rem 0.3rem;display: block;}
+	.shop2_content .repurchase a span{display:block;text-decoration: underline;}
 	.shop2_content .total{height: 0.98rem;width: 100%;display: block; background: #fff;position: fixed;bottom: 0;left: 0;z-index: 99;border-top: 1px solid #ddd;}
 	.shop2_content .qx_label{display: inline-block;height: 0.98rem;line-height: 0.98rem;float: left;position: relative;margin-left: 0.3rem;}
 	.shop2_content .qx_label span{font-size: 0.3rem;color: #333;display: block;font-family: helvetica;margin-left: 0.5rem;}
