--- a/catalog/view/theme/default/css/index.css
+++ b/catalog/view/theme/default/css/index.css
@@ -532,7 +532,8 @@
 	.gwc_pc .hg_modal .hg_shop_ul .div1 a{width: 0.8rem;padding: 0;}
 	.gwc_pc .hg_modal .hg_shop_ul .div1 img{width: 0.8rem;height: 0.8rem;}
 	.gwc_pc .hg_modal .hg_shop_ul .div_ol{width: 80%;float: left;	position: absolute;left:0.8rem;}
-	.gwc_pc .hg_modal .hg_shop_ul ol li{display: block;float: left;font-size: 14px;color: #333;padding: 0 20px;margin-left: 20px;margin-bottom: 15px;
+	.gwc_pc .hg_modal .hg_shop_ul .div_ol>p{padding-left: 20px;margin-bottom: 5px;}
+	.gwc_pc .hg_modal .hg_shop_ul ol li{display: block;float: left;font-size: 14px;color: #333;padding: 0 20px;margin-left: 20px;margin-bottom: 10px;
 	border-radius: 50px;border: 1px solid #f5f5f5;background: #f5f5f5;height: 30px;line-height: 30px;cursor: pointer;}
 	.gwc_pc .hg_modal .hg_shop_ul ol li.active,.gwc_pc .hg_modal .hg_shop_ul ol li:hover{border: 1px solid #f23030;color: #f23030;background: #fffbfb;}
 	.gwc_pc .hg_modal .hg_shop_ul .price .sp1{font-size: 24px;color: #f23030;display: inline-block;margin-left: 20px;line-height: 24px;}
