--- a/catalog/view/theme/default/css/index.css
+++ b/catalog/view/theme/default/css/index.css
@@ -532,9 +532,9 @@
 	.gwc_pc .hg_modal .hg_shop_ul .div1 a{width: 0.8rem;padding: 0;}
 	.gwc_pc .hg_modal .hg_shop_ul .div1 img{width: 0.8rem;height: 0.8rem;}
 	.gwc_pc .hg_modal .hg_shop_ul .div_ol{width: 80%;float: left;	position: absolute;left:0.8rem;}
-	.gwc_pc .hg_modal .hg_shop_ul .div_ol>p{padding-left: 20px;margin-bottom: 5px;}
+	.gwc_pc .hg_modal .hg_shop_ul .div_ol>p{padding-left: 20px;margin-bottom: 10px;}
 	.gwc_pc .hg_modal .hg_shop_ul ol li{display: block;float: left;font-size: 14px;color: #333;padding: 0 20px;margin-left: 20px;margin-bottom: 10px;
-	border-radius: 50px;border: 1px solid #f5f5f5;background: #f5f5f5;height: 30px;line-height: 30px;cursor: pointer;}
+	border: 1px solid #f5f5f5;background: #f5f5f5;height: 25px;line-height: 25px;cursor: pointer;}
 	.gwc_pc .hg_modal .hg_shop_ul ol li.active,.gwc_pc .hg_modal .hg_shop_ul ol li:hover{border: 1px solid #f23030;color: #f23030;background: #fffbfb;}
 	.gwc_pc .hg_modal .hg_shop_ul .price .sp1{font-size: 24px;color: #f23030;display: inline-block;margin-left: 20px;line-height: 24px;}
 	.gwc_pc .hg_modal .hg_shop_ul .price .sp2{font-size: 18px;color: #999;display: inline-block;margin-left: 20px;line-height: 24px;text-decoration: line-through;}
@@ -2441,9 +2441,9 @@
 	.shop2_content .hg_shop_ul .big{width: 0.6rem;height: 0.6rem;padding: 0.1rem 0 0 0.1rem;position: absolute;left: 2rem;top:1.5rem;}
 	.shop2_content .hg_shop_ul .big span{width: 0.5rem;height: 0.5rem;display: block;background: rgba(0,0,0,.8) url(../img/png/fdj.png) no-repeat center;}
 	.shop2_content .hg_shop_ul .div_ol{width:4.6rem;float: right;border-bottom: 1px solid #eee;padding-bottom: 0.4rem;}
-	.shop2_content .hg_shop_ul .div_ol>p{padding-left: 0.15rem;margin-bottom: 0.05rem;}
-	.shop2_content .hg_shop_ul ol li{display: block;float: left;font-size: 0.22rem;color: #333;padding: 0 0.2rem;margin-left: 0.2rem;margin-bottom: 0.2rem;
-	border-radius: 50px;border: 1px solid #f5f5f5;background: #f5f5f5;height: 0.5rem;line-height: 0.5rem;cursor: pointer;}
+	.shop2_content .hg_shop_ul .div_ol>p{padding-left: 0.2rem;margin-bottom: 0.25rem;font-size: 0.22rem;}
+	.shop2_content .hg_shop_ul ol li{display: block;float: left;font-size: 0.22rem;color: #333;padding: 0 0.2rem;margin-left: 0.2rem;margin-bottom: 0.15rem;
+	border: 1px solid #f5f5f5;background: #f5f5f5;height: 0.4rem;line-height: 0.4rem;}
 	.shop2_content .hg_shop_ul ol li.active,.shop2_content .hg_shop_ul ol li:hover{border: 1px solid #f23030;color: #f23030;background: #fffbfb;}
 	.shop2_content .hg_shop_ul .price{width: 2rem;position: inherit;margin-top: 0.1rem;}
 	.shop2_content .hg_shop_ul .price .sp1{font-size: 0.28rem;color: #f23030;display: inline-block;margin-left: 0.2rem;line-height: 0.28rem;}
