--- a/catalog/view/theme/default/css/index.css
+++ b/catalog/view/theme/default/css/index.css
@@ -507,12 +507,14 @@
 	position: absolute;left: calc(50% - 6px);top: 50%;background: #707070;transform: rotate(-45deg);}
 	.gwc_pc .hg_div .bot .yxhg_ol li a{width: 80px;height: 80px;display: block;float: left;margin-right: 20px;}
 	.gwc_pc .hg_div .bot .yxhg_ol li img{width: 80px;height: 80px;display: block;}
-	.gwc_pc .hg_div .bot .yxhg_ol li .sp1{display: inline-block;padding: 0 20px;border-radius: 50px;font-size: 14px;color: #666;height: 30px;
-	line-height: 30px;background: #f5f5f5;margin-bottom: 23px;}
+	.gwc_pc .hg_div .bot .yxhg_ol li .sp1{display: inline-block;padding: 0 20px;font-size: 14px;color: #666;height: 25px;
+	line-height: 25px;background: #f5f5f5;margin-bottom: 13px;}
 	.gwc_pc .hg_div .bot .yxhg_ol li .sp2{font-size: 24px;line-height: 24px;height: 24px;display: inline-block;color: #FF2330;margin-right: 10px;}
 	.gwc_pc .hg_div .bot .yxhg_ol li .sp3{font-size: 18px;line-height: 24px;height: 24px;display: inline-block;color: #999;margin-right: 40px;}
 	.gwc_pc .hg_div .bot .yxhg_ol li .sp4{font-size: 14px;line-height: 24px;height: 24px;display: inline-block;color: #000;}
 	.gwc_pc .hg_div .bot .yxhg_ol li .hg_tetx{display: inline-block;float: left;}
+	.gwc_pc .hg_div .bot .yxhg_ol li .hg_tetx>div>p{margin-bottom: 10px;}
+	
 	.gwc_pc .hg_modal {display: none;}
 	.gwc_pc .hg_modal .texts{display: block;max-width: 1200px;width: 70%;margin: 0 auto;background: #fff;transform: translateY(-50%);position: relative;top: 50%;} 
 	.gwc_pc .hg_modal .texts h2{font-size: 20px;color: #333;display: block;padding: 40px 60px 30px 60px;height: 22px;} 
@@ -2420,13 +2422,15 @@
 	position: absolute;left: calc(50% - 0.07rem);top: 50%;background: #707070;transform: rotate(-45deg);}
 	.shop2_content .hg_div .bot .yxhg_ol li a{width: 1.8rem;height: 1.8rem;display: block;float: left;border: 1px solid #eee;}
 	.shop2_content .hg_div .bot .yxhg_ol li img{width: 1.8rem;height: 1.8rem;display: block;}
-	.shop2_content .hg_div .bot .yxhg_ol li .sp1{display: inline-block;padding: 0 0.4rem;border-radius: 50px;font-size: 0.22rem;color: #666;height: 0.36rem;
-	line-height: 0.36rem;background: #f5f5f5;margin-bottom: 1.2rem;}
+	.shop2_content .hg_div .bot .yxhg_ol li .sp1{display: inline-block;padding: 0 0.4rem;font-size: 0.22rem;color: #666;height: 0.36rem;
+	line-height: 0.36rem;background: #f5f5f5;margin-bottom: 0.8rem;}
 	.shop2_content .hg_div .bot .yxhg_ol li .sp2{font-size: 0.28rem;line-height: 0.28rem;height: 0.28rem;display: inline-block;color: #FF2330;margin-right: 0.2rem;}
 	.shop2_content .hg_div .bot .yxhg_ol li .sp3{font-size: 0.22rem;line-height: 0.28rem;height: 0.28rem;display: inline-block;color: #999;}
 	.shop2_content .hg_div .bot .yxhg_ol li .sp4{font-size: 0.24rem;line-height: 0.28rem;height: 0.28rem;display: inline-block;color: #000;float: right;}
 	.shop2_content .hg_div .bot .yxhg_ol li .hg_tetx{display: inline-block;float: left;width: calc(100% - 2.9rem);border-bottom: 1px solid #eee;
 	padding:0 0 0.3rem 0.3rem;}
+	.shop2_content .hg_div .bot .yxhg_ol li .hg_tetx>div>p{margin-bottom: 0.2rem;font-size: 0.22rem;}
+	
 	.shop2_content .hg_div .bot .yxhg_ol li:last-child .hg_tetx{border-bottom: none;}
 	.shop2_content .hg_nav {position: fixed;top: 0.88rem;z-index: 100;padding: 0.19rem 0.3rem;background: #fff6e4;}
 	.shop2_content .hg_nav p{font-size: 0.24rem;color: #ff8033;line-height: 0.24rem;padding: 0.04rem 0;}
