--- a/catalog/view/theme/default/css/index.css
+++ b/catalog/view/theme/default/css/index.css
@@ -283,13 +283,13 @@
 	.pro_det_content .meas_img .close{width: 63px;height:63px;position: absolute;right: 0;top: 0;
 	background: url(../img/png/close2.png) no-repeat center center;background-size: 23px 23px;cursor: pointer;}
 	.pro_det_content .right a.a_btn{width: 14.16vw;height: 48px;line-height: 48px;text-align: center;border-radius: 100px;
-	font-size: 0.83vw;color: #fff;padding-top: 0;margin: 1.66vw 0 2.5vw 0;float: left;
+	font-size: 0.83vw;color: #fff;padding-top: 0;margin: 1.66vw 10px 2.5vw 0;float: left;
 	 background: -webkit-linear-gradient(left, #f23030 , #fb3500);background: -o-linear-gradient(right, #f23030, #fb3500);
 	  background: -moz-linear-gradient(right, #f23030, #fb3500); background: linear-gradient(to right, #f23030 , #fb3500); }
 	.pro_det_content .right a.a_btn:hover{
 		 background: -webkit-linear-gradient(left, #fa4940 , #fa4940);background: -o-linear-gradient(right, #fa4940, #fa4940);
 	  background: -moz-linear-gradient(right, #fa4940, #fa4940); background: linear-gradient(to right, #fa4940 , #fa4940);}
-	.pro_det_content .right .conpon_btn{width: 12vw;height: 48px;border: 1px dashed #fc0059;background: #fff;float: right;
+	.pro_det_content .right .conpon_btn{width: 12vw;min-width: 200px; height: 48px;border: 1px dashed #fc0059;background: #fff;float: left;
 	margin: 1.66vw 0 2.5vw 0;font-size: 16px;color: #333;position: relative;}		  
 	.pro_det_content .right .conpon_btn:before{content: '';display: block;width: 8px;height: 48px;background: #fa3404;position: absolute;left: -1px;top: -1px;}  
 	.pro_det_content .right .conpon_btn:after{content: '';display: block;width: 1px;height: 1px;background: #666;
@@ -351,7 +351,7 @@
 	.pro_det_content .ul_text li:nth-of-type(even){width: 47%; padding-right: 0.52vw;}
 	.pro_det_content .ul_text li span{font-family: fram;font-size: 1.04vw;float: left;}
 	.pro_det_content .ul_text li i{color: #ed2155;}
-	@media (min-width: 921px) and (max-width: 1340px) {
+	@media (max-width: 1340px) {
 		.pro_det_content .top .pro_big_img{width: 40vw;height: 40vw;}
 		.pro_det_content .top .right{padding-left: 2vw;}
 		.pro_det_content .right a.a_btn{width: 19vw;}
@@ -456,6 +456,10 @@
 	.gwc_pc .div4 .price_input span.add{background: url(../img/png/new_3.png) no-repeat center/0.14rem 0.14rem;right: 0;}
 	.gwc_pc .div4 .price_input input{display: inline-block;width: 0.46rem;height: 0.4rem;line-height: 0.4rem; float: left;margin-left: 0.4rem;
 	border-right: 1px solid#ccc;border-left: 1px solid#ccc;text-align: center;font-size: 0.2rem;background: #f5f5f5;}
+	.gwc_pc li .div4 .price_input p.bg{line-height: 0.4rem;color: #fff;font-size: 0.18rem;background: #8fc31f;height: 0.4rem;margin-top: 0.4rem;}
+	.gwc_pc li.no .div4 .price_input p.bg{background: #f23030;}
+	.gwc_pc li.no .div4 .price_input .add{opacity: .5;}
+	
 	.gwc_pc .div5{display: inline-block;float: left;width: 1.2rem ;height: 1.6rem;line-height: 1.6rem; position: absolute;right: 8%;text-align: center;}
 	.gwc_pc .div5 span.z_price{display: inline-block;font-size: 0.2rem;vertical-align: middle;}  
 	.gwc_pc .div6{display: inline-block;width: 0.6rem ;height: 1.6rem;line-height: 1.6rem; position: absolute;
@@ -2339,9 +2343,9 @@
 	.shop2_content .check_i{width: 0.5rem;height: 0.5rem;display: block; position: absolute;top: 50%;margin-top: -0.25rem; left: 0;z-index: 1;
 	background: url(../img/png/new_6.png) no-repeat left center/0.3rem;}
 	.shop2_content .check_i.active{background: url(../img/png/new_6_.png) no-repeat left center/0.3rem;}
-	.shop2_content .shop2_ul{margin:1.1rem 0 2.17rem 0;}
-	.shop2_content .shop2_ul li{position: relative;background: #fff;margin-bottom: 0.2rem;z-index: 9;padding: 0.4rem 0.4rem 0.4rem 0.8rem;overflow: hidden;}
-	.shop2_content .shop2_ul li .dx_label{width: 0.5rem;height: 0.5rem;display: block;position: absolute;top: 50%;margin-top: -0.25rem; left: 0.3rem;z-index: 9;}
+	.shop2_content .shop2_ul{margin:1.1rem 0.2rem 2.17rem 0.2rem;}
+	.shop2_content .shop2_ul li{position: relative;background: #fff;margin-bottom: 0.2rem;z-index: 9;padding: 0.4rem 0.2rem 0.4rem 0.6rem;overflow: hidden;border-radius: 10px;}
+	.shop2_content .shop2_ul li .dx_label{width: 0.5rem;height: 0.5rem;display: block;position: absolute;top: 50%;margin-top: -0.25rem; left: 0.15rem;z-index: 9;}
 	.shop2_content .shop2_ul .pic_img{width: 1.8rem;float: left;}
 	.shop2_content .shop2_ul .pic_img a{display: block;}
 	.shop2_content .shop2_ul .pic_img a img{display: block;}
@@ -2349,10 +2353,10 @@
 	.shop2_content .shop2_ul .text a.a_bt{font-family: helvetica; font-size: 0.22rem;color: #333;display: block;margin-bottom: 0.08rem;}
 	.shop2_content .shop2_ul .text p{font-size: 0.22rem;font-family: helvetica;color: #666;background: #f5f5f5;border-radius: 20px;height: 0.36rem;
 	line-height: 0.36rem;margin: 0 0.1rem 0.1rem 0;display: inline-block;padding: 0 0.17rem;}
-	.shop2_content .price{width: 1.8rem;text-align: center;position: absolute;left: 2.8rem;bottom: 0.35rem;}
+	.shop2_content .price{width: 1.8rem;text-align: center;position: absolute;left: 2.6rem;bottom: 0.3rem;}
 	.shop2_content .price p{font-size: 0.3rem;font-family: helvetica;color: #f23030;text-align: left;}
 	.shop2_content .price p span{text-decoration: line-through;color: #999;margin-left: 0.08rem;}
-	.shop2_content .pre_div{position: absolute;bottom: 0.40rem;right: 0.3rem;width: 1.5rem;}
+	.shop2_content .pre_div{position: absolute;bottom: 0.30rem;right: 0.3rem;width: 1.5rem;}
 	.shop2_content .shanchu {background: #ff003b;width: 0.72rem;position: absolute;right: -0.72rem;height: 100%;top: 0;}
 	.shop2_content .shanchu .del{width: 0.72rem;height: 0.72rem;display: block;position: absolute; top: 50%;right: 0;
 	margin-top: -0.36rem;z-index: 99;padding: 0.2rem;}
@@ -2361,6 +2365,13 @@
 	.shop2_content .num_div span.sub{background:#f5f5f5 url(../img/png/new_3_.png) no-repeat center/0.17rem;position: absolute;top: 0;left: 0;}
 	.shop2_content .num_div span.sub.active{opacity: .5;}
 	.shop2_content .num_div span.add{background:#f5f5f5 url(../img/png/new_3.png) no-repeat center/0.17rem;position: absolute;top: 0;right: 0;}
+	.shop2_content li.no .num_div span.add{opacity: .5;}
+	.shop2_content li .bg{font-size: 0.24rem;color: #8fc31f;display: block;float: left;margin-left: 0.2rem;padding: 0.15rem 0;margin-bottom: 0.3rem;}
+	.shop2_content li .bg i{display: inline-block;width: 0.24rem;height: 0.24rem;border-radius: 50%;float: left;margin-right: 0.1rem;
+	background: #8fc31f url(../img/png/cart_pbg.png) no-repeat center/0.12rem 0.12rem;}
+	.shop2_content li.no .bg{color: #f23030;}
+	.shop2_content li.no .bg i{background: #f23030 url(../img/png/cart_pbg.png) no-repeat center/0.12rem 0.12rem;}
+	
 	.shop2_content .num_div input{width: 0.5rem;height: 0.5rem;line-height: 0.5rem;text-align: center;font-size: 0.3rem;font-family: helvetica;
 	border-radius: inherit;background: transparent;position: absolute;top: 0;left: 0.5rem;}
 	.shop2_content .close{width: 0.4rem;height: 0.4rem;position: absolute;top:0.4rem;right: 0;background: url(../img/png/close3.png) no-repeat;
